--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="carta">           <!-- caja de la carta-->
         <div class="contenido">   <!--contenido principal-->
             <div class="imagen">  <!--contenedor imagen-->  
-                <img class="pica" src="imagenes/pica.png" alt="Imagen de Pokemón">
+                <img id="pica" src="imagenes/pica.png" alt="Imagen de Pokemón">
             </div>
-            <div class="nombre"> Pikachu</div>
-            <div class="descripcion"> Un pokemon eléctrico con ataques poderosos.</div>
-            <button class="acc">Evolucion</button>
+            <div id="nombre"> Pikachu</div>
+            <div id="descripcion"> Un pokemon eléctrico con ataques poderosos.</div>
+            <button id="acc">Evolucion</button>
         </div>
     </div>
 
